added extra curriculars

--- a/assignments/assignment-2/index.html
+++ b/assignments/assignment-2/index.html
@@ -6,6 +6,7 @@
     <meta name="keywords" contents="Software Developement,Phillip Davis, Resume, HTML, Python, C++, SFSU, San Francisco State University, San Francisco">
     <meta name="author" contents="Phillip Davis">
     <title>Phillip Davis - Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="images/baybridge.jpeg">
 </head>
 
 <main>
@@ -23,9 +24,11 @@
     <nav>
         <a href="#education">Education</a><br>
         <a href="#experience">Experience</a><br>
+        <a href="#extracurricular">Extra Curriculars</a><br>
         <a href="#intro">Intro Video</a><br>
         <a href="#location">Location</a><br>
         <a href="#contact">Contact</a>
+        
     </nav>
 
     
@@ -124,7 +127,16 @@
             <h3><li>5 additional years at providing technical support for companies in various fields <br>including biotech, medical, and advertising.</li></h3>
         </ol>
     </section>
-    <section id="Intro">
+    <section id="extracurricular">
+        <h2>Extra Curriculars</h2>
+        <ul>
+            <li>Learning to Surf</li>
+            <li>Rock Climbing</li>
+            <li>Play Saxophone and Guitar</li>
+        </ul>
+
+    </section>
+    <section id="intro">
         <h2>Intro Video</h2>
         <div class="preview" style="visibility: hidden"></div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=hw5JZr_0bemB7OS5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -132,7 +144,8 @@
 
     </section>
     <section id="location">
-        <div style="max-width:100%;list-style:none; transition: none;overflow:hidden;width:500px;height:500px;"><div id="google-maps-display" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=94114&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="googlecoder" rel="nofollow" href="https://kbj9qpmy.com/bp" id="get-map-data">Internet Provider</a><style>#google-maps-display img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>    </section>
+        <div style="max-width:100%;list-style:none; transition: none;overflow:hidden;width:500px;height:500px;"><div id="google-maps-display" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=94114&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="googlecoder" rel="nofollow" href="https://kbj9qpmy.com/bp" id="get-map-data">Internet Provider</a><style>#google-maps-display img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>  
+    </section>
     <section id="contact">
         <h2>Contact</h2>
         <form>
