changed nav section to ul and set images sizes by percentage

--- a/assignments/assignment-2/index.html
+++ b/assignments/assignment-2/index.html
@@ -5,13 +5,14 @@
     <meta name="description" content="Professional webiste and profile of Phillip Davis">
     <meta name="keywords" contents="Software Developement,Phillip Davis, Resume, HTML, Python, C++, SFSU, San Francisco State University, San Francisco">
     <meta name="author" contents="Phillip Davis">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Phillip Davis - Portfolio</title>
     <link rel="icon" type="image/x-icon" href="images/baybridge.jpeg">
 </head>
 
 <main>
     <h1>Phillip Davis</h1>
-    <img src ="images/profile.jpg" alt="Phillip Davis's profile picture" width="300"  heigh: auto>
+    <img src ="images/profile.jpg" alt="Phillip Davis's profile picture" width="13%"  heigh: auto>
 
     <h2>About me</h2>
     <p>I am a Software engineering student at SFSU with 10+ years experience providing IT services to a variety of industries. <br>I currently lead Mobile and Executive support for Zenitech Computer Solutions where I support several<br> national clients as well as assisting with development of data pipelines for a UEBA based AI security software.
@@ -22,12 +23,15 @@
     </p>
 
     <nav>
-        <a href="#education">Education</a><br>
-        <a href="#experience">Experience</a><br>
-        <a href="#extracurricular">Extra Curriculars</a><br>
-        <a href="#intro">Intro Video</a><br>
-        <a href="#location">Location</a><br>
-        <a href="#contact">Contact</a>
+        <ul>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#extracurricular">Extra Curriculars</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#intro">Intro Video</a></li>
+            <li><a href="#location">Location</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
         
     </nav>
 
@@ -36,7 +40,7 @@
     <section id="education"></section>
         <h2>Education</h2>
         <ul>
-            <img src ="images/sfsuLogo.jpeg" alt="SFSU Logo" width="100"  heigh: auto>
+            <img src ="images/sfsuLogo.jpeg" alt="SFSU Logo" width="7%"  heigh: auto>
             <li style="font-size: 18px;">San Francsico State University
             
             <ul>
@@ -61,7 +65,7 @@
             </table>
             </li>
             <br><br>
-            <img src ="images/dvcLogo.jpeg" alt="DVC Logo" width="100"  heigh: auto>
+            <img src ="images/dvcLogo.jpeg" alt="DVC Logo" width="7%"  heigh: auto>
             <li style ="font-size: 18px;">Diablo Valley College
                 <ul>
                     <li>Computer Science and Sound Engineering</li>
@@ -161,6 +165,10 @@
 
 </main>
 
+<footer>
+    <p>Author: Phillip Davis</p>
+    <p><a href="mailto:phillipwd95@gmail.com">phillipwd95@gmail.com</a></p>
+</footer>
 
 </html>
 
