creating submission.md and filling it out

--- a/assignments/assignment-2/index.html
+++ b/assignments/assignment-2/index.html
@@ -13,6 +13,7 @@
 <main>
     <h1>Phillip Davis</h1>
     <img src ="images/profile.jpg" alt="Phillip Davis's profile picture" width="13%"  heigh: auto>
+    <p>&copy; 2025 Phillip Davis &bull; All rights reserved</p>
 
     <h2>About me</h2>
     <p>I am a Software engineering student at SFSU with 10+ years experience providing IT services to a variety of industries. <br>I currently lead Mobile and Executive support for Zenitech Computer Solutions where I support several<br> national clients as well as assisting with development of data pipelines for a UEBA based AI security software.
@@ -36,9 +37,7 @@
         
     </nav>
 
-    
-
-    <section id="education"></section>
+    <section id="education">
         <h2>Education</h2>
         <ul><!--embeds school logo-->
             <img src ="images/sfsuLogo.jpeg" alt="SFSU Logo" width="7%"  heigh: auto>
@@ -96,6 +95,7 @@
             </li>
         </ul>
     </section>
+
     <section id = "experience">
         <h2>Experience</h2>
         <ol>
@@ -134,6 +134,7 @@
             <h3><li>5 additional years at providing technical support for companies in various fields <br>including biotech, medical, and advertising.</li></h3>
         </ol>
     </section>
+
     <section id="extracurricular">
         <h2>Extra Curriculars</h2>
         <ul>
@@ -147,7 +148,7 @@
         <h2>Projects</h2>
         <article>
             <h3>Automating device restarts via database collation between Jamf and Zscaler APIs</h3>
-            <!--embedsproject screenshot-->
+            <!--embeds project screenshot-->
             <img src="images/jamfzscaler.jpg" alt="Jamf Zscaler project screenshot" width="50%" height="auto">
             <p>Using the APIs for Jamf and Zscaler I pull active devices from both portals to json files. Then from the zscaler<br>
             list there is a field that only refreshes if the device is restarted. I compare this time to the local system time<br>
@@ -159,8 +160,8 @@
         <article>
             <h3></h3>
         </article>
-
     </section>
+
     <section id="intro">
         <h2>Intro Video</h2>
         <!--embeds youtube video-->
@@ -169,10 +170,12 @@
         </div>
 
     </section>
+
     <section id="location">
         <!--embeds map-->
         <div style="max-width:100%;list-style:none; transition: none;overflow:hidden;width:500px;height:500px;"><div id="google-maps-display" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=94114&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="googlecoder" rel="nofollow" href="https://kbj9qpmy.com/bp" id="get-map-data">Internet Provider</a><style>#google-maps-display img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>  
     </section>
+
     <section id="contact">
         <h2>Contact</h2>
         <!--creates contact form-->
@@ -183,7 +186,6 @@
             <input type="text" placeholder="Message" style="height: 150px;width: 300px;"><br><br>
             <input type="submit" value="Submit">
         </form>
-
     </section>
 
 
