added some basic color and alignment, profile picture to circle

--- a/assignments/assignment-3/index.html
+++ b/assignments/assignment-3/index.html
@@ -8,11 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phillip Davis - Portfolio</title>
     <link rel="icon" type="image/x-icon" href="images/baybridge.jpeg">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link href="https://fonts.cdnfonts.com/css/aileron" rel="stylesheet">
 </head>
 
 <main>
     <h1>Phillip Davis</h1>
-    <img src ="images/profile.jpg" alt="Phillip Davis's profile picture" width="13%">
+    <img src ="images/profile.jpg" alt="Phillip Davis's profile picture" class="rounded">
     <p>&copy; 2025 Phillip Davis &bull; All rights reserved</p>
 
     <h2>About me</h2>
@@ -30,7 +32,6 @@
             <li><a href="#experience">Experience</a></li>
             <li><a href="#extracurricular">Extra Curriculars</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#intro">Intro Video</a></li>
             <li><a href="#location">Location</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -39,7 +40,7 @@
 
     <section id="education">
         <h2>Education</h2>
-        <img src ="images/sfsuLogo.jpeg" alt="SFSU Logo" width="7%">
+        <img src ="images/sfsuLogo.jpeg" alt="SFSU Logo" width="7%" class="rounded">
         <ul><!--embeds school logo-->
             
             <li style="font-size: 18px;">San Francsico State University
@@ -69,7 +70,7 @@
         
             <br><br>
             <!--embeds school logo-->
-            <img src ="images/dvcLogo.jpeg" alt="DVC Logo" width="7%">
+            <img src ="images/dvcLogo.jpeg" alt="DVC Logo" width="7%" class="rounded">
         <ul>
             <li style ="font-size: 18px;">Diablo Valley College
                 <ul>
@@ -161,15 +162,6 @@
             so I edit the user info in both lists to create a standard user name to match up the data. Then I can find the Jamf devices<br>
             that need to be restarted and trigger the restarts via the Jamf API. </p>
         </article>
-    </section>
-
-    <section id="intro">
-        <h2>Intro Video</h2>
-        <!--embeds youtube video-->
-        <div class="preview" style="visibility: hidden"></div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=hw5JZr_0bemB7OS5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-
     </section>
 
     <section id="location">
