created first ai css and submission.md

--- a/assignments/assignment-3/index.html
+++ b/assignments/assignment-3/index.html
@@ -8,12 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phillip Davis - Portfolio</title>
     <link rel="icon" type="image/x-icon" href="images/baybridge.jpeg">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/ai-proffesional.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400..700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Faustina:ital,wght@0,300..800;1,300..800&family=Markazi+Text:wght@400..700&display=swap" rel="stylesheet">
 </head>
 
@@ -116,7 +114,7 @@
                 <table>
 
                     <tr>
-                        <th>Job Exeperience</th>
+                        <th>Job Experience</th>
                     </tr>
                     <tr>
                         <td>Lead iOS and OSX Support</td>
