--- a/assignments/assignment-4/calculator.html
+++ b/assignments/assignment-4/calculator.html
@@ -5,12 +5,41 @@
     <meta name = "description" content = "Calculator app">
     <meta name = "keywords" content = "Calculator, javascript, addition, subtraction, division, multiplication, CSS">
     <meta name = "Author" content = "Phillip Davis">
-    <meta name = "viewport" content = "width = device-width, initial-scale = 1.0"
+    <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
     <title>Calculator</title>
-    <link rel="icon" type = "image-x-icon" href = "imgages\calc">
-    <link rel = "stylesheet" href = "calc_styl.css">
+    <link rel="icon" type = "image-x-icon" href = "images\calc.png">
+    <link rel = "stylesheet" href = "styles\calc_style.css">
+    <script src="scripts\calculator.js" defer></script>
 </head>
+<main>
+    <div class = "calculator">
+        
+        <div class = "IO" id = "in"></div>
+        <div class = "IO" id = "out"></div>        
+        <div class = "func" id ="clear">AC</div>
+        <div class = "func" id ="neg">+/-</div>
+        <div class = "func" id ="percent">%</div>
+        <div class = "action" id = "divide"> /</div>
+        <div class = "num" id ="seven"> 7</div>
+        <div class = "num" id = "eight"> 8</div>
+        <div class = "num" id = "nine"> 9</div>
+        <div class = "action" id = "multiply"> X</div>
+        <div class = "num" id = "four" > 4</div>
+        <div class = "num" id = "five"> 5</div>
+        <div class = "num" id = "six"> 6</div>
+        <div class = "action" id = "minus"> -</div>
+        <div class = "num" id = "one"> 1</div>
+        <div class = "num" id = "two"> 2</div>
+        <div class = "num" id = "three"> 3</div>
+        <div class = "action" id = "plus"> +</div>
+        <div class = "num" id = "zero"> 0</div>
+        <div class = "num" id = "dot"> .</div>        
+        <div class = "equals">=</div>
 
+    </div>
+   
+    
+</main>
 
 
 
