--- a/assignments/assignment-4/calculator.html
+++ b/assignments/assignment-4/calculator.html
@@ -15,7 +15,11 @@
     <div class = "calculator">
         
         <div class = "IO" id = "in"></div>
-        <div class = "IO" id = "out"></div>        
+        <div class = "IO" id = "out"></div> 
+        <div class = "memory" id ="memAdd">M+</div> 
+        <div class = "memory" id ="memMinus">M-</div>
+        <div class = "memory" id ="memRecall">MR</div>
+        <div class = "memory" id ="memClear">MC</div>     
         <div class = "func" id ="clear">AC</div>
         <div class = "func" id ="neg">+/-</div>
         <div class = "func" id ="percent">%</div>
