Added cross page navigation

--- a/assignments/assignment-4/calculator.html
+++ b/assignments/assignment-4/calculator.html
@@ -11,7 +11,11 @@
     <link rel = "stylesheet" href = "styles\calc_style.css">
     <script src="scripts\calculator.js" defer></script>
 </head>
+<header>
+    <a href="index.html">Home</a>
+</header>
 <main>
+    
     <div class = "calculator">
         
         <div class = "IO" id = "in"></div>
