--- a/assignments/assignment-4/calculator.html
+++ b/assignments/assignment-4/calculator.html
@@ -50,6 +50,9 @@
 </main>
 
 
-
+<footer>
+    <p>Author: Phillip Davis</p>
+    <p><a href="mailto:phillipwd95@gmail.com">Email</a></p>
+</footer>
 
 </html>
