--- a/index.html
+++ b/index.html
@@ -225,6 +225,12 @@
                     delete when reaching max size, easily access data points and run queries on data by key attirbutes.
                 </p>
             </article>
+            <article>
+                <a href = "calculator.html"><h3>Calculator</h3></a>
+                <p>
+                    Built a Calculator using HTML CSS and Javascript that uses input validation and memory functions.
+                </p>
+            </article>
 
         </div>
         
