--- a/assignments/assignment-4/calculator.html
+++ b/assignments/assignment-4/calculator.html
@@ -11,6 +11,12 @@
     <link rel = "stylesheet" id = "css-theme" href = "styles\calc_style.css">
     <script src="scripts\calculator.js" defer></script>
 </head>
+<script>
+    document.addEventListener('DOMContentLoaded', function(){
+        let theme=document.getElementById('css-theme');
+        theme.href = "styles\calc_style.css";
+    });
+</script>
 <style>
     /* Theme Switcher Styling */
     .theme-switcher {
@@ -57,7 +63,7 @@
     }
 </style>
 <header>
-    <a href="index.html">Home</a>
+    <a href="index.html" id="Home">Home</a>
 </header>
 <main>
     
@@ -104,47 +110,4 @@
         
     </div>
 </div>
-
-<!-- Theme Switcher Script -->
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        // Get all theme buttons
-        const themeButtons = document.querySelectorAll('.theme-button');
-        // Get the stylesheet link element
-        const themeStylesheet = document.getElementById('css-theme');
-
-        // Function to set active theme
-        function setActiveTheme(themeName) {
-            // Update stylesheet href
-            themeStylesheet.href = `styles/${themeName}.css`;
-
-            // Update active button state
-            themeButtons.forEach(button => {
-                if (button.dataset.theme === themeName) {
-                    button.classList.add('active');
-                } else {
-                    button.classList.remove('active');
-                }
-            });
-
-            // Save preference to localStorage
-            localStorage.setItem('preferredTheme', themeName);
-        }
-
-        // Add click event to all theme buttons
-        themeButtons.forEach(button => {
-            button.addEventListener('click', function() {
-                const themeName = this.dataset.theme;
-                setActiveTheme(themeName);
-            });
-        });
-
-        // Check if there's a saved theme preference
-        const savedTheme = localStorage.getItem('preferredTheme');
-        if (savedTheme) {
-            setActiveTheme(savedTheme);
-        }
-    });
-</script>
-
 </html>
