added calculator files

--- a/assignments/final-project/index.html
+++ b/assignments/final-project/index.html
@@ -96,7 +96,7 @@
         <div id="sfsu">
             
           <div>
-            <img src="images/sfsuLogo.jpeg" alt="SFSU Logo" width="7%" class="rounded">
+            <img src="images/sfsuLogo.jpeg" alt="SFSU Logo" class="rounded">
           </div>
           <div>
             <h3>San Francisco State University</h3>
@@ -122,7 +122,7 @@
         <div id="dvc">
             
             <div>
-              <img src="images/dvcLogo.jpeg" alt="DVC Logo" width="7%" class="rounded">
+              <img src="images/dvcLogo.jpeg" alt="DVC Logo" class="rounded">
             </div>
             <div>
               <h3>Diablo Valley College</h3>
@@ -219,10 +219,20 @@
                 </p>
             </article>
             <article>
-                <h3>Cache Manager</h3>
+                <a href ="https://github.com/R3plug/Cache_Manager"><h3>Cache Manager</h3></a>
                 <p>
                     Created cache manager in C++ utilizing a FIFO list, BST, and Hashtable to allow for tracking of data
                     delete when reaching max size, easily access data points and run queries on data by key attirbutes.
+                </p>
+            </article>
+            <article>
+                <a href="https://csc317-group-i.onrender.com/"><h3>Password Manager</h3></a>
+                <p>Using HTML, CSS, and NodeJS created a password manager modeled on MVC.</p>
+            </article>
+            <article>
+                <a href = "calculator.html"><h3>Calculator</h3></a>
+                <p>
+                    Built a Calculator using HTML CSS and Javascript that uses input validation and memory functions.
                 </p>
             </article>
 
