fixed html and css errors

--- a/assignments/final-project/calculator.html
+++ b/assignments/final-project/calculator.html
@@ -9,59 +9,9 @@
     <title>Calculator</title>
     <link rel="icon" type = "image-x-icon" href = "images/calc.png">
     <link rel = "stylesheet" id = "css-theme" href = "styles/calc_style.css">
-    <script src="scripts\calculator.js" defer></script>
+    <script src="scripts/calculator.js" defer></script>
 </head>
-<script>
-    document.addEventListener('DOMContentLoaded', function(){
-        let theme=document.getElementById('css-theme');
-        theme.href = "styles/calc_style.css";
-    });
-</script>
-<style>
-    /* Theme Switcher Styling */
-    .theme-switcher {
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        background-color: #fff;
-        border-radius: 8px;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-        padding: 12px;
-        z-index: 1000;
-    }
 
-    .theme-switcher h3 {
-        margin-top: 0;
-        margin-bottom: 10px;
-        font-size: 16px;
-        text-align: center;
-    }
-
-    .theme-buttons {
-        display: flex;
-        gap: 8px;
-    }
-
-    .theme-button {
-        padding: 8px 12px;
-        background-color: #f0f0f0;
-        border: 1px solid #ddd;
-        border-radius: 4px;
-        cursor: pointer;
-        font-size: 14px;
-        transition: all 0.2s ease;
-    }
-
-    .theme-button:hover {
-        background-color: #e0e0e0;
-    }
-
-    .theme-button.active {
-        background-color: #007bff;
-        color: white;
-        border-color: #0069d9;
-    }
-</style>
 <header>
     <a href="index.html" id="Home">Home</a>
 </header>
@@ -105,7 +55,7 @@
     <h3>Theme Switcher</h3>
     <div class="theme-buttons">
         <button class="theme-button active" data-theme="calc_style">Style One</button>
-        <button class="theme-button" data-theme="calc_style_hybrid1">Style Two</button>
+        <button class="theme-button" data-theme= "calc_hybrid1">Style Two</button>
         
         
     </div>
