--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phillip Davis - Portfolio</title>
     <link rel="icon" type="image/x-icon" href="images/baybridge.jpeg">
-    <link rel="stylesheet" href="styles/styles.css" id="css-theme">
+    <link rel="stylesheet" href="styles/ai-1.css" id="css-theme">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400..700&display=swap" rel="stylesheet">
@@ -96,7 +96,7 @@
         <div id="sfsu">
             
           <div>
-            <img src="images/sfsuLogo.jpeg" alt="SFSU Logo" width="7%" class="rounded">
+            <img src="images/sfsuLogo.jpeg" alt="SFSU Logo" class="rounded">
           </div>
           <div>
             <h3>San Francisco State University</h3>
@@ -122,7 +122,7 @@
         <div id="dvc">
             
             <div>
-              <img src="images/dvcLogo.jpeg" alt="DVC Logo" width="7%" class="rounded">
+              <img src="images/dvcLogo.jpeg" alt="DVC Logo" class="rounded">
             </div>
             <div>
               <h3>Diablo Valley College</h3>
@@ -219,11 +219,15 @@
                 </p>
             </article>
             <article>
-                <h3>Cache Manager</h3>
+                <a href ="https://github.com/R3plug/Cache_Manager"><h3>Cache Manager</h3></a>
                 <p>
                     Created cache manager in C++ utilizing a FIFO list, BST, and Hashtable to allow for tracking of data
                     delete when reaching max size, easily access data points and run queries on data by key attirbutes.
                 </p>
+            </article>
+            <article>
+                <a href="https://csc317-group-i.onrender.com/"><h3>Password Manager</h3></a>
+                <p>Using HTML, CSS, and NodeJS created a password manager modeled on MVC.</p>
             </article>
             <article>
                 <a href = "calculator.html"><h3>Calculator</h3></a>
